NEXT-2320 - Add background update call and small changes

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-file-upload/sw-plugin-file-upload.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-file-upload/sw-plugin-file-upload.html.twig
@@ -3,7 +3,7 @@
         {% block sw_plugin_file_upload_content %}
             <div class="sw-plugin-file-upload__content">
                 {% block sw_plugin_file_upload_button %}
-                    <sw-button class="sw-plugin-file-upload__button" variant="ghost" @click="onClickUpload">
+                    <sw-button class="sw-plugin-file-upload__button" variant="primary" @click="onClickUpload">
                         {{ $tc('sw-plugin.fileUpload.buttonFileUpload') }}
                     </sw-button>
                 {% endblock %}
