--- a/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.scss
+++ b/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.scss
@@ -17,6 +17,10 @@
     .plugin-manager-sidebar {
         position: absolute;
         top: 100px;
+
+        .external-icon {
+            margin-left: 6px;
+        }
     }
 
     .sw-empty-state {
