--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-create/sw-product-stream-create.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-create/sw-product-stream-create.html.twig
@@ -3,3 +3,10 @@
                         disabled>
     </sw-language-switch>
 {% endblock %}
+
+{% block sw_product_stream_detail_content_language_info %}
+    <sw-language-info
+            :entityDescription="placeholder(productStream, 'name', $tc('sw-product-stream.detail.textHeadline'))"
+            isNewEntity>
+    </sw-language-info>
+{% endblock %}
