--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-create/sw-settings-shipping-create.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-create/sw-settings-shipping-create.html.twig
@@ -21,3 +21,10 @@
                         disabled>
     </sw-language-switch>
 {% endblock %}
+
+{% block sw_settings_shipping_detail_language_info %}
+    <sw-language-info
+            :entityDescription="placeholder(shippingMethod, 'name', $tc('sw-settings-shipping.detail.textHeadline'))"
+            isNewEntity>
+    </sw-language-info>
+{% endblock %}
