--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -35,6 +35,12 @@
         {% block sw_settings_shipping_detail_content %}
             <sw-card-view slot="content">
 
+                {% block sw_settings_shipping_detail_content_language_info %}
+                    <sw-language-info
+                            :entityDescription="placeholder(shippingMethod, 'name', $tc('sw-settings-shipping.detail.textHeadline'))">
+                    </sw-language-info>
+                {% endblock %}
+
                 {% block sw_settings_shipping_detail_content_tabs %}
                     <sw-tabs class="sw-shipping-detail-page__tabs">
                         {% block sw_settings_shipping_detail_content_tabs_general %}
