NTR Added new logo

--- a/Resources/nuxt-component-library/assets/css/main.less
+++ b/Resources/nuxt-component-library/assets/css/main.less
@@ -74,8 +74,7 @@ table {
 .content--main {
     margin: 0 auto;
     max-width: 1120px;
-    padding-top: 70px;
-    padding-bottom: 45px;
+    padding: 70px 20px 45px;
 }
 
 u {
