NEXT-1784 - fixed CR

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
@@ -1,5 +1,5 @@
 {% block sw_condition_base %}
-<div class="sw-condition-base" :class="[conditionClass, { 'has--error': hasErrors }, {'is--api' : isApi()}]">
+<div class="sw-condition-base" :class="[conditionClass, hasErrorsClass, isApiCLass]">
     <div class="sw-condition-base__container">
         {% block sw_condition_base_field_condition %}
             <sw-select :id="createId()"
