--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-license-list/sw-plugin-license-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-license-list/sw-plugin-license-list.html.twig
@@ -118,14 +118,23 @@
                 {% endblock %}
 
                 {% block sw_plugin_license_list_card_empty_state %}
-                    <sw-empty-state v-if="!isLoading && !total"
-                                    :title="$tc('sw-plugin.license-list.messageEmpty')">
-                    </sw-empty-state>
+                    <template v-if="!isLoading">
+                        <sw-empty-state v-if="!isLoggedIn"
+                                        :title="$tc('sw-plugin.license-list.messageNotLoggedIn')">
+                            <sw-button variant="primary" size="small" @click="openLoginModal()">
+                                {{ $tc('sw-plugin.license-list.labelAccountLogin') }}
+                            </sw-button>
+                        </sw-empty-state>
+                        <sw-empty-state v-if="isLoggedIn && !total"
+                                        :title="$tc('sw-plugin.license-list.messageEmpty')">
+                        </sw-empty-state>
+                    </template>
                 {% endblock %}
 
                 {% block sw_plugin_license_list_card_login_modal %}
                     <sw-plugin-store-login v-if="showLoginModal"
-                                           @sw-plugin-store-login-success="loginSuccess()">
+                                           @sw-plugin-store-login-abort="loginAbort"
+                                           @sw-plugin-store-login-success="loginSuccess">
                     </sw-plugin-store-login>
                 {% endblock %}
             </sw-card>
