NTR Added documentation for sw-tree

--- a/Resources/nuxt-component-library/assets/css/main.less
+++ b/Resources/nuxt-component-library/assets/css/main.less
@@ -94,3 +94,16 @@ u {
 .sw-modal {
     position: relative !important;
 }
+
+.page--component section ul {
+    margin-left: 2rem;
+}
+
+@media screen and (max-width: 960px) {
+    .sidebar--main {
+        width: 260px;
+    }
+    .page-wrap {
+        padding-left: 260px;
+    }
+}
