--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
@@ -74,13 +74,13 @@
 
     {% block sw_product_stream_filter_range %}
         <template v-else-if="isTypeRange()">
-            {% block sw_product_stream_filter_lower_than_field %}
+            {% block sw_product_stream_filter_less_than_field %}
                 <sw-field v-if="isTypeLower()"
                           type="number"
                           class="field--main"
                           v-model="actualCondition.parameters.lt"
                           :disabled="isApi()"
-                          :placeholder="$tc('global.sw-condition.operator.lowerThan')">
+                          :placeholder="$tc('global.sw-condition.operator.lessThan')">
                 </sw-field>
             {% endblock %}
 
@@ -94,13 +94,13 @@
                 </sw-field>
             {% endblock %}
 
-            {% block sw_product_stream_filter_lower_than_equals_field %}
+            {% block sw_product_stream_filter_less_than_equals_field %}
                 <sw-field v-else-if="isTypeLowerEquals()"
                           type="number"
                           class="field--main"
                           v-model="actualCondition.parameters.lte"
                           :disabled="isApi()"
-                          :placeholder="$tc('global.sw-condition.operator.lowerThanEquals')">
+                          :placeholder="$tc('global.sw-condition.operator.lessThanEquals')">
                 </sw-field>
             {% endblock %}
 
@@ -129,7 +129,7 @@
                                   class="field--main"
                                   v-model="actualCondition.parameters.lte"
                                   :disabled="isApi()"
-                                  :placeholder="$tc('global.sw-condition.operator.lowerThanEquals')">
+                                  :placeholder="$tc('global.sw-condition.operator.lessThanEquals')">
                         </sw-field>
                     {% endblock %}
                 </template>
