--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
@@ -28,7 +28,8 @@
     {% endblock %}
 
     {% block sw_product_stream_filter_type_select %}
-        <sw-select :store="getTypeStore()"
+        <sw-select v-if="lastField.type !== 'boolean'"
+                   :store="getTypeStore()"
                    v-model="type"
                    :id="createId()"
                    itemValueKey="type"
