--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -4,7 +4,7 @@
         {% block sw_product_stream_detail_header %}
             <template slot="smart-bar-header">
                 <h2 v-if="productStream.name">{{ productStream.name }}</h2>
-                <h2 v-else class="sw-product-stream-detail__empty-title">{{ $tc('sw-product-stream.detail.textHeadline') }}</h2>
+                <h2 v-else class="sw-product-stream-detail__empty-title">{{ placeholder(productStream, 'name', $tc('sw-product-stream.detail.textHeadline')) }}</h2>
             </template>
         {% endblock %}
 
@@ -45,6 +45,7 @@
                         {% block sw_product_basic_form_name_field %}
                             <sw-field type="text"
                                       :label="$tc('sw-product-stream.detail.labelName')"
+                                      :validation="nameRequired"
                                       :placeholder="placeholder(productStream, 'name', $tc('sw-product-stream.detail.placeholderName'))"
                                       v-model="productStream.name">
                             </sw-field>
@@ -71,12 +72,6 @@
                                            :config="treeConfig"
                                            ref="conditionTree">
                         </sw-condition-tree>
-                    </sw-card>
-                {% endblock %}
-
-                {% block sw_product_stream_detail_result %}
-                    <sw-card :large="true" :title="$tc('sw-product-stream.detail.titleResult')">
-                        {# TODO: Add result list #}
                     </sw-card>
                 {% endblock %}
 
