NEXT-2476 - Shopware Account Settings

--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-license-list/sw-plugin-license-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-license-list/sw-plugin-license-list.html.twig
@@ -32,7 +32,7 @@
                                                         sortable>
                                             {% block sw_plugin_license_list_grid_columns_name_label %}
                                                 <sw-plugin-table-entry :iconPath="item.iconPath" :title="item.name"
-                                                                       :subtitle="item.producer">
+                                                                       :subtitle="item.producerName">
                                                 </sw-plugin-table-entry>
                                             {% endblock %}
                                         </sw-grid-column>
