NEXT-2051 - Update variant generator with restrictions, surcharges, storefront order and media. Also update the design.

--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -37,8 +37,10 @@
 
                         {% block sw_modal_body %}
                             <div class="sw-modal__body">
-                                {% block sw_card_loader %}
-                                    <sw-loader v-if="isLoading"></sw-loader>
+                                {% block sw_modal_loader %}
+                                    <slot name="modal-loader">
+                                        <sw-loader v-if="isLoading"></sw-loader>
+                                    </slot>
                                 {% endblock %}
                                 <slot>
                                     {% block sw_modal_slot_default %}{% endblock %}
