--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.scss
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.scss
@@ -2,11 +2,20 @@
 
 $sw-product-variants-configurator-selection-overlay: rgba(255, 255, 255, 0.8);
 $sw-product-variants-configurator-selection-text-color: $color-gutenberg;
+$sw-product-variants-configurator-selection-search-background: $color-light-gray;
 
-.sw-product-detail-variants .sw-property-search .sw-property-search__toolbar.sw-product-variants-configurator-selection__toolbar {
+.sw-property-search__search-field.sw-product-variants-configurator-selection-search__search-field {
+    padding: 30px;
     border-bottom: 1px solid #D8DDE6;
-    margin-bottom: 0px;
-    padding-bottom: 30px;
+    background-color: $sw-product-variants-configurator-selection-search-background;
+
+    .sw-simple-search-field {
+        margin: 0;
+    }
+
+    .sw-icon.sw-simple-search-field__search-icon.icon--small-search.sw-icon--small {
+        left: 45px;
+    }
 }
 
 .generate-variant-progress-bar__wrapper {
