--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -65,7 +65,7 @@
 
                 {% block sw_product_stream_detail_filter %}
                     <sw-card :large="true" class="sw-product-stream-detail__condition_container" :title="$tc('sw-product-stream.detail.titleFilter')">
-                        <sw-condition-tree v-if="productStream"
+                        <sw-condition-tree v-if="productStream && !isLoading"
                                            :entity="productStream"
                                            :conditionStore="conditionStore"
                                            :config="treeConfig"
