NEXT-1742 - Fix version handling for many to many associations. Fix product_media versioning

--- a/Resources/administration/src/module/sw-show-case/view/sw-show-case-detail-base/sw-show-case-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-show-case/view/sw-show-case-detail-base/sw-show-case-detail-base.html.twig
@@ -33,10 +33,10 @@
     </sw-card>
 
 
-    <sw-card title="1:N - categories ro (loaded lazy)">
+    <sw-card title="1:N - categories (loaded lazy)">
 
         <sw-one-to-many-grid slot="grid"
-                             :collection="record.categoriesRo"
+                             :collection="record.categories"
                              :localMode="record.isNew()"
                              :columns="categoryColumns">
 
