--- a/Resources/administration/src/app/component/entity/sw-entity-listing/sw-entity-listing.html.twig
+++ b/Resources/administration/src/app/component/entity/sw-entity-listing/sw-entity-listing.html.twig
@@ -5,7 +5,7 @@
 {% block sw_data_grid_slot_actions %}
     <slot name="detail-action" :item="item">
         <sw-context-menu-item v-if="detailRoute" :routerLink="{ name: detailRoute, params: { id: item.id } }">
-            {{ $tc('global.sw-data-grid.editAction') }}
+            {{ $tc('global.entity-components.editAction') }}
         </sw-context-menu-item>
     </slot>
 
@@ -13,27 +13,27 @@
 
     <slot name="delete-action" :item="item">
         <sw-context-menu-item @click="showDelete(item.id)" variant="danger">
-            {{ $tc('global.sw-data-grid.deleteAction') }}
+            {{ $tc('global.entity-components.deleteAction') }}
         </sw-context-menu-item>
     </slot>
 {% endblock %}
 
 {% block sw_data_grid_slot_action_modals %}
-    <sw-modal v-if="deleteId === item.id" @closeModal="closeModal" :title="$tc('global.sw-data-grid.deleteTitle')" variant="small">
+    <sw-modal v-if="deleteId === item.id" @closeModal="closeModal" :title="$tc('global.entity-components.deleteTitle')" variant="small">
         <p class="sw-listing__confirm-delete-text">
             <slot name="delete-confirm-text">
-                {{ $tc('global.sw-data-grid.deleteMessage') }}
+                {{ $tc('global.entity-components.deleteMessage') }}
             </slot>
         </p>
 
         <template slot="modal-footer">
             <slot name="delete-modal-footer">
                 <sw-button @click="closeModal" size="small">
-                    {{ $tc('global.sw-data-grid.deleteCancel') }}
+                    {{ $tc('global.entity-components.deleteCancel') }}
                 </sw-button>
 
                 <sw-button @click="deleteItem(item.id)" variant="primary" size="small">
-                    {{ $tc('global.sw-data-grid.deleteConfirm') }}
+                    {{ $tc('global.entity-components.deleteConfirm') }}
                 </sw-button>
             </slot>
         </template>
