--- a/Resources/administration/src/module/sw-show-case/page/sw-show-case-list/sw-show-case-list.html.twig
+++ b/Resources/administration/src/module/sw-show-case/page/sw-show-case-list/sw-show-case-list.html.twig
@@ -1,5 +1,5 @@
 <sw-page>
    <template slot="content">
-      <sw-listing :repository="repository" :columns="columns" detailRoute="sw.show.case.detail" />
+      <sw-entity-listing :repository="repository" :columns="columns" detailRoute="sw.show.case.detail" />
    </template>
 </sw-page>
